telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestConstructorModifier.java
package tests;

abstract class A {

	public A(String s) {
	}
	
	private A(){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

