telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestBadConstructor.java
package tests;

abstract class A {

	public A(String s) {
	}
	
	private b(){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

